fix unit tests on java 16
this was literally working yesterday so i'm very confused

idk where this logs folder came from (i do, it's from the unit tests)